2005-06-16  Angus Leeming  <leeming@lyx.org>

	* lyxrc.C (output, read): wrap all input and output of paths with
	calls to os::internal_path and os::external_path, respectively.
	(output): wrap bind_file inside quotes.

	* converter.C (view): enable the viewer to use the '$$s' placeholder.

2005-06-14  Angus Leeming  <leeming@lyx.org>

	* lyx_main.C (init): ensure that the LyX binary dir is the first
	element in the PATH on non-POSIX builds.

2005-06-11  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* LaTeXFeatures.C (getPackages): solve amsmath-wasysym conflict

2005-06-09  Angus Leeming  <leeming@lyx.org>

	* converter.C (convert): Don't forget "outfile = real_outfile" as
	the final step in a conversion where the input and output file names
	are the same. Otherwise, future conversion steps won't work...

2005-05-18  Angus Leeming  <leeming@lyx.org>

	* buffer.C (readFile): Quote all file names passed to lyx2lyx.

2005-05-09  Angus Leeming  <leeming@lyx.org>

	* Makefile.am: make compilation of pspell.[Ch] and ispell.[Ch] dependent
	on conditionals set at configure time.

	* SpellBase.[Ch]: no longer an abstract base class. Instead,
	it can be compiled in its own right but has no-op functionality.

	* lyx_cb.C: artificially define fork() on Windows as a no-op failing
	function so that auto-saving works, albeit in a blocking manner.

	* lyxfunc.C (getStatus): disable the spellchecker if USE_[IP]SPELL
	are not defined.

	* lyxserver.C: disable on Windows.

2005-04-27  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lyxlayout.C (Read): transform underscores to spaces in CopyStyle
	argument. 

2005-04-17  Angus Leeming  <leeming@lyx.org>

	* buffer.C (makeLaTeXFile): replace code to manipulate a path
	containing space and '~' characters with a call to latex_path().

2005-03-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lyxfunc.C (dispatch): translate message before sending it to the
	minibuffer. 

2005-02-25  Angus Leeming  <leeming@lyx.org>
